--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,7 +3,9 @@
         xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
-        android:layout_margin="8dp"
+        android:id="@+id/container"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <TextView
@@ -26,6 +28,7 @@
             android:layout_marginStart="24dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
     <ImageView
+            android:id="@+id/icon_img"
             android:layout_width="70dp"
             android:src="@drawable/ic_image"
             android:layout_height="70dp" android:layout_marginTop="8dp"
