--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -3,13 +3,13 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable name="viewModel"
-                  type="com.esi.mydiary.fragments.HomeViewModel"/>
+                  type="com.esi.mydiary.fragments.home.HomeViewModel"/>
 
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".fragments.HomeFragment">
+            tools:context=".fragments.home.HomeFragment">
 
 
         <androidx.recyclerview.widget.RecyclerView
