--- a/app/src/main/res/layout/add_diary_fragment.xml
+++ b/app/src/main/res/layout/add_diary_fragment.xml
@@ -10,7 +10,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".fragments.AddDiaryFragment">
+                tools:context=".fragments.addDiary.AddDiaryFragment">
 
             <ImageView
                     android:src="@drawable/ic_image"
@@ -39,24 +39,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/title_txt" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="24dp"/>
-            <TextView
-                    android:id="@+id/date_txt"
-                    android:text="Date :"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    app:layout_constraintTop_toBottomOf="@+id/title" android:layout_marginStart="24dp"
-                    app:layout_constraintStart_toStartOf="parent"/>
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:inputType="date"
-                    android:ems="10"
-                    android:id="@+id/date" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/date_txt" android:layout_marginStart="24dp"
-                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="24dp" app:layout_constraintHorizontal_bias="0.0"/>
+
             <TextView
                     android:id="@+id/content_txt"
                     android:text="Content :"
@@ -64,7 +47,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    app:layout_constraintTop_toBottomOf="@+id/date" android:layout_marginStart="24dp"
+                    app:layout_constraintTop_toBottomOf="@+id/title" android:layout_marginStart="24dp"
                     app:layout_constraintStart_toStartOf="parent"/>
             <EditText
                     android:id="@+id/content"
