--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#455a64</color>
     <color name="colorPrimaryDark">#1c313a</color>
-    <color name="colorAccent">#a1887f</color>
+    <color name="colorAccent">#00887f</color>
 </resources>
